= MagLev Change Log

== Changes for 22814  2010-02-02

* Fix Trac 657 and Trac 659
* Fix assertion failure in Ruby 'break' in 'slow' build.
* persistence-api documentation: fixed bogus references to
  Module#persistable=
* Fix Trac 657 in implementation of class variables
* Test::Unit now works
* Fix Enumerable#count for no-parameter case

== Changes for 22804  2010-01-29

* Fix Trac 656 in implemention of eval
* Fix Trac 654,655 in the IR generator phase of Ruby parser
* Webrick updated with security patch from 1.8.6p388
* Fixed --stone option to maglev-ruby
* Added Maglev::System.stone_name to return the name of the stone the VM is
  connected to.
* More fixes to eval for constant resolution
* Improve commit performance by changes in AIO usage
* Improve tranlog write performance by avoiding unnecessary fsync() calls
* Added new stats StnAioFsyncCount and StnAioTimeInFsyncMs

== Changes for 22780  2010-01-22

* Fix Trac 652
* Fix Trac 653 in Lexer
* Various FFI
* Fix infinite loop on Sparc in high-res profiling
* Optimize Integer>>\\  to not compute unneeded quotient.
* In topaz, SET CLASS with no arg will print name of the current class
* Fix retry of timer thread connect in socketprim.c
* Fixes in GS for SOX complience
* Fixes for FFI alignment of nested structs and unions
* Fixes for RVM compliance

== Changes for 22725  2010-01-15

* Enhancements to make MagLev run under RVM
* Fixed bug that prevented Rake from running

== Changes for 22710  2010-0112

* Fixes to make haml work better
* Fixes to make rack 1.1 work
* Fixes to constant definitions
* Implemented Process::Status
* Fixes regression in Trac 592
* Fixes Trac 641a , 645, 647, 649
* Fixes compile error on Sparc Solaris
* Installable using RVM. See:  http://rvm.beginrescueend.com/
* Changed installers to use .tar.gz format rather than .zip
* Changed downloads from .zip to .tar.gz format.

== Changes for 22683  2010-01-04

* Optimize fetch/store to Ruby global variables